#48: Fix label visibility by defining text color

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,6 +30,7 @@
 .tzi-avatar-name-box {
     background-color: #393f3f;
     font-size: 8pt;
+    color: #d3d3d3;
 }
 
 .tzi-avatar-name {
